--- a/sass/page.sass
+++ b/sass/page.sass
@@ -1,53 +1,156 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
-@import "compass/reset", "compass/css3"
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic)
+@import "compass/reset", "compass/css3","breakpoint"
+@import url(http://fonts.googleapis.com/css?family=Questrial)
+$bgcontrol: 0.5
 
 html
 	width: 100%
 	height: 100%
 	overflow: hidden
+	-webkit-overflow-scrolling: touch
+	line-height: 1.5
+	font-size: 24pt
 body
 	width: 100%
 	height : 100%
-	line-height: 1.5
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", "Noto Sans T Chinese Light","Microsoft JhengHei","微軟正黑體", Arial, "Open Sans", sans-serif
-img
-	&.fill
-		margin: 0 auto
-		width: 90%
-		display: block	
+	font-family: "Questrial","HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", "Noto Sans T Chinese Thin","Microsoft JhengHei", Arial, "Open Sans", sans-serif
+strong
+	font-weight: bold
+figure
+	&.groupimg
+		margin-left: 2em
+	img
+		margin: 0.2em
+		&.fill
+			margin: 1em auto
+			width: 90vw
+			display: block	
+		&.maxHeight
+			max-height: 60vh
+		&.maxWidth20
+			max-width: 20vw
+		&.maxWidth70
+			max-width: 70vw
+a
+	color: #00f
+	&:hover
+		color: #fff
 .page
 	width: 100%
-	min-height: 100%
+	height: 100%
 	max-height: 100%
-	overflow: auto
-h1
-	font-size: 5vw 
-	background-color: rgba(255,255,255,0.5)
-	padding-left: 1em
-	width: 100%
-
+	background-color: rgba(255,255,255,$bgcontrol) 
+	overflow-y: auto
+	overflow-x: hidden
+	// position: relative
+	// &:before
+	// 	content: ''
+	// 	display: block
+	// 	position: fixed
+	// 	top: 0
+	// 	left: 0
+	// 	z-index: -1
+	// 	width: 100%
+	// 	height: 100vh
+	// 	background: #3ACFEB url('../img/bg.jpg') no-repeat fixed right bottom
+	// 	+background-size(auto 100vh)
+	p
+		margin-left: 2rem
+		margin-right: 1rem
+	ul
+		margin-left: 2rem
+		margin-right: 1rem
+#title
+	background: #3ACFEB url('../img/bg_title.jpg') no-repeat fixed left top
+	+background-size(auto 100%)
+	+background-size(auto 100vh) //行動裝置
+	text-align: center
+	h1
+		padding-top: 35vh
+		font-size: 2.5rem
+		vertical-align: midden
+		font-weight: bold
+		+text-shadow(1pt -1pt 0 #ffa7b3, -2pt 1pt 2pt #fff)  
+		background-color: rgba(255,255,255,0.5)
+		+box-sizing()
+		width: 100%
+		height: 75%
+		line-height: 100%
+		+box-shadow(0px 0px 15px #999,0px 0px 2px #000) 
+	span
+		font-size: 1.5rem
+	p
+		background-color: rgba(55, 206, 235,0.5)
+		+box-sizing()
+		width: 100%
+		height: 25%
+		margin: 0
+		padding-top: 1rem
+#footer
+	background: #3ACFEB url('../img/bg_title.jpg') no-repeat fixed left top
+	+background-size(auto 100%)
+	+background-size(auto 100vh) //行動裝置
+	text-align: center
+	h1
+		font-size: 2.5rem
+		font-weight: bold
+		background-color: rgba(255,255,255,0.5)
+		+box-sizing()
+		margin-top: 20%
+		width: 100%
+		line-height: 150%
+		position: relative
+		&:after
+			content: ''
+			display: block
+			width: 100%
+			height: 10px
+			background-color: rgba(255,255,255,0.5)
+			position: absolute
+			bottom: -20px
+			left: 0
 h2 
-	font-size: 5vw 
+	font-size: 2rem
 	background-color: rgba(255,255,255,0.5)
-	padding-left: 1em
-	margin-top: 0.3em
-	margin-bottom: 0.3em
-	width: 80%
+	font-weight: bold
+	padding-left: 1rem
+	margin-top: 0.3rem
+	margin-bottom: 0.3rem
+	min-width: 80%
 	position: relative
-	&:after
-		content: ''
-		display: block
-		width: 0
-		height: 0
-		position: absolute
-		top: 0
-		right: -5vw
-		border-top: 5vw*1.5/2 solid transparent
-		border-bottom: 5vw*1.5/2 solid transparent
-		border-left: 5vw solid rgba(255,255,255,0.5)
-	
+	// &:after
+	// 	content: ''
+	// 	display: block
+	// 	width: 0
+	// 	height: 0
+	// 	position: absolute
+	// 	top: 0
+	// 	right: -2rem
+	// 	border-top: 2rem*1.5/2 solid transparent
+	// 	border-bottom: 2rem*1.5/2 solid transparent
+	// 	border-left: 2rem solid rgba(255,255,255,0.5)
+
+.inline
+	li
+		+inline-block()
+.list
+	list-style: square
+	li
+		margin-left: 2rem
+.tag
+	padding-right: 1rem
+	text-align: right
+	color: #0077c1
+	font-size: 0.6rem
+	font-style: italic
+.del
+	text-decoration: line-through
+.red
+	color: #f00
+.gray
+	color: #666
+.blue
+	color: #00f
+.size1_3
+	font-size: 1.3em
+.size0_8
+	font-size: 0.8em
