--- a/css/page.css
+++ b/css/page.css
@@ -1,6 +1,4 @@
-@charset "UTF-8";
-/* Welcome to Compass. In this file you should write your main styles. (or centralize your imports) Import this file using the following HTML or equivalent: <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic);
+@import url(http://fonts.googleapis.com/css?family=Questrial);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font: inherit; font-size: 100%; vertical-align: baseline; }
 
 html { line-height: 1; }
@@ -18,15 +16,52 @@ a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
-html { width: 100%; height: 100%; overflow: hidden; }
+html { width: 100%; height: 100%; overflow: hidden; -webkit-overflow-scrolling: touch; line-height: 1.5; font-size: 24pt; }
 
-body { width: 100%; height: 100%; line-height: 1.5; font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", "Noto Sans T Chinese Light", "Microsoft JhengHei", "微軟正黑體", Arial, "Open Sans", sans-serif; }
+body { width: 100%; height: 100%; font-family: "Questrial", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", "Noto Sans T Chinese Thin", "Microsoft JhengHei", Arial, "Open Sans", sans-serif; }
 
-img.fill { margin: 0 auto; width: 90%; display: block; }
+strong { font-weight: bold; }
 
-.page { width: 100%; min-height: 100%; max-height: 100%; overflow: auto; }
+figure.groupimg { margin-left: 2em; }
+figure img { margin: 0.2em; }
+figure img.fill { margin: 1em auto; width: 90vw; display: block; }
+figure img.maxHeight { max-height: 60vh; }
+figure img.maxWidth20 { max-width: 20vw; }
+figure img.maxWidth70 { max-width: 70vw; }
 
-h1 { font-size: 5vw; background-color: rgba(255, 255, 255, 0.5); padding-left: 1em; width: 100%; }
+a { color: #00f; }
+a:hover { color: #fff; }
 
-h2 { font-size: 5vw; background-color: rgba(255, 255, 255, 0.5); padding-left: 1em; margin-top: 0.3em; margin-bottom: 0.3em; width: 80%; position: relative; }
-h2:after { content: ""; display: block; width: 0; height: 0; position: absolute; top: 0; right: -5vw; border-top: 3.75vw solid transparent; border-bottom: 3.75vw solid transparent; border-left: 5vw solid rgba(255, 255, 255, 0.5); }
+.page { width: 100%; height: 100%; max-height: 100%; background-color: rgba(255, 255, 255, 0.5); overflow-y: auto; overflow-x: hidden; }
+.page p { margin-left: 2rem; margin-right: 1rem; }
+.page ul { margin-left: 2rem; margin-right: 1rem; }
+
+#title { background: #3ACFEB url("../img/bg_title.jpg") no-repeat fixed left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
+#title h1 { padding-top: 35vh; font-size: 2.5rem; vertical-align: midden; font-weight: bold; text-shadow: 1pt -1pt 0 #ffa7b3, -2pt 1pt 2pt #fff; background-color: rgba(255, 255, 255, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; height: 75%; line-height: 100%; -moz-box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; -webkit-box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; }
+#title span { font-size: 1.5rem; }
+#title p { background-color: rgba(55, 206, 235, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; height: 25%; margin: 0; padding-top: 1rem; }
+
+#footer { background: #3ACFEB url("../img/bg_title.jpg") no-repeat fixed left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
+#footer h1 { font-size: 2.5rem; font-weight: bold; background-color: rgba(255, 255, 255, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; margin-top: 20%; width: 100%; line-height: 150%; position: relative; }
+#footer h1:after { content: ""; display: block; width: 100%; height: 10px; background-color: rgba(255, 255, 255, 0.5); position: absolute; bottom: -20px; left: 0; }
+
+h2 { font-size: 2rem; background-color: rgba(255, 255, 255, 0.5); font-weight: bold; padding-left: 1rem; margin-top: 0.3rem; margin-bottom: 0.3rem; min-width: 80%; position: relative; }
+
+.inline li { display: inline-block; vertical-align: middle; *vertical-align: auto; *zoom: 1; *display: inline; }
+
+.list { list-style: square; }
+.list li { margin-left: 2rem; }
+
+.tag { padding-right: 1rem; text-align: right; color: #0077c1; font-size: 0.6rem; font-style: italic; }
+
+.del { text-decoration: line-through; }
+
+.red { color: #f00; }
+
+.gray { color: #666; }
+
+.blue { color: #00f; }
+
+.size1_3 { font-size: 1.3em; }
+
+.size0_8 { font-size: 0.8em; }
