--- a/css/skilltree.css
+++ b/css/skilltree.css
@@ -1,7 +1,7 @@
-.skillTree { -moz-transition-property: all; -o-transition-property: all; -webkit-transition-property: all; transition-property: all; -moz-transition-duration: 1s; -o-transition-duration: 1s; -webkit-transition-duration: 1s; transition-duration: 1s; }
-.skillTree .del { background: rgba(255, 246, 0, 0.3); text-decoration: line-through; }
-.skillTree .little { background: rgba(53, 206, 234, 0.3); }
-.skillTree li { background: rgba(255, 255, 255, 0.3); -moz-border-radius: 1em; -webkit-border-radius: 1em; border-radius: 1em; border-left: 1px solid #fff; border-bottom: 1px solid rgba(255, 255, 255, 0.6); margin-left: 0.2em; margin-bottom: 0.2em; padding: 0.2em; }
+.skillTree { font-size: 0.6rem; margin: 0.5rem; -moz-transition-property: all; -o-transition-property: all; -webkit-transition-property: all; transition-property: all; -moz-transition-duration: 1s; -o-transition-duration: 1s; -webkit-transition-duration: 1s; transition-duration: 1s; }
+.skillTree .del { background: rgba(255, 246, 0, 0.4); text-decoration: line-through; }
+.skillTree .little { background: rgba(53, 206, 234, 0.4); }
+.skillTree li { background: rgba(255, 255, 255, 0.4); -moz-border-radius: 1em; -webkit-border-radius: 1em; border-radius: 1em; border-left: 1px solid #fff; border-right: 1px solid rgba(0, 0, 0, 0.2); border-bottom: 1px solid rgba(255, 255, 255, 0.6); margin-left: 0.2em; margin-top: 0.2em; margin-bottom: 0.2em; padding: 0.2em; }
+.skillTree ul { margin-left: 0; }
 .skillTree ul:after { content: ""; display: block; clear: both; }
-.skillTree ul > li { display: block; float: left; line-height: 4em; min-width: 5em; text-align: center; }
-.skillTree ul ul { display: none; }
+.skillTree ul > li { display: block; float: left; line-height: 4em; min-width: 4em; text-align: center; }
