--- a/sass/clockbg.sass
+++ b/sass/clockbg.sass
@@ -1,18 +1,9 @@
 @import "compass/css3"
-$bgcontrol: 0.4
 body
-	background-color: rgba(255,255,255,$bgcontrol) 
-	&:before
-		content: ''
-		display: block
-		position: fixed
-		z-index: -1
-		top: 0
-		left: 0
-		width: 100%
-		height: 100%
-		background: #3ACFEB url('../img/bg.jpg') no-repeat fixed 100% 100%
-		+background-size(auto 100%)
+	width: 100%
+	height: 100%
+	background: #3ACFEB url('../img/bg.jpg') no-repeat fixed right top
+	+background-size(auto 100vh)
 #clock
 	position: fixed
 	z-index: -1
