--- a/css/page.css
+++ b/css/page.css
@@ -16,7 +16,7 @@ a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
-html { width: 100%; height: 100%; overflow: hidden; -webkit-overflow-scrolling: touch; line-height: 1.5; font-size: 24pt; }
+html { width: 100%; height: 100%; overflow: hidden; -webkit-overflow-scrolling: touch; line-height: 1.5; font-size: 26px; }
 
 body { width: 100%; height: 100%; font-family: "Questrial", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Lucida Grande", "Noto Sans T Chinese Thin", "Microsoft JhengHei", Arial, "Open Sans", sans-serif; }
 
@@ -36,16 +36,16 @@ a:hover { color: #fff; }
 .page p { margin-left: 2rem; margin-right: 1rem; }
 .page ul { margin-left: 2rem; margin-right: 1rem; }
 
-#title { background: #3ACFEB url("../img/bg_title.jpg") no-repeat fixed left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
+#title { background: #3ACFEB url("../img/bg_title.jpg") no-repeat left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
 #title h1 { padding-top: 35vh; font-size: 2.5rem; vertical-align: midden; font-weight: bold; text-shadow: 1pt -1pt 0 #ffa7b3, -2pt 1pt 2pt #fff; background-color: rgba(255, 255, 255, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; height: 75%; line-height: 100%; -moz-box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; -webkit-box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; box-shadow: 0px 0px 15px #999, 0px 0px 2px #000; }
 #title span { font-size: 1.5rem; }
 #title p { background-color: rgba(55, 206, 235, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; height: 25%; margin: 0; padding-top: 1rem; }
 
-#footer { background: #3ACFEB url("../img/bg_title.jpg") no-repeat fixed left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
+#footer { background: #3ACFEB url("../img/bg_title.jpg") no-repeat left top; -moz-background-size: auto 100%; -o-background-size: auto 100%; -webkit-background-size: auto 100%; background-size: auto 100%; -moz-background-size: auto 100vh; -o-background-size: auto 100vh; -webkit-background-size: auto 100vh; background-size: auto 100vh; text-align: center; }
 #footer h1 { font-size: 2.5rem; font-weight: bold; background-color: rgba(255, 255, 255, 0.5); -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; margin-top: 20%; width: 100%; line-height: 150%; position: relative; }
 #footer h1:after { content: ""; display: block; width: 100%; height: 10px; background-color: rgba(255, 255, 255, 0.5); position: absolute; bottom: -20px; left: 0; }
 
-h2 { font-size: 2rem; background-color: rgba(255, 255, 255, 0.5); font-weight: bold; padding-left: 1rem; margin-top: 0.3rem; margin-bottom: 0.3rem; min-width: 80%; position: relative; }
+h2 { font-size: 2rem; background-color: rgba(255, 255, 255, 0.5); font-weight: bold; padding-left: 1rem; margin-top: 1rem; margin-bottom: 0.3rem; min-width: 80%; position: relative; }
 
 .inline li { display: inline-block; vertical-align: middle; *vertical-align: auto; *zoom: 1; *display: inline; }
 
@@ -65,3 +65,7 @@ h2 { font-size: 2rem; background-color: rgba(255, 255, 255, 0.5); font-weight: b
 .size1_3 { font-size: 1.3em; }
 
 .size0_8 { font-size: 0.8em; }
+
+.opacity0 { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; }
+
+.opacity1 { filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false); opacity: 1; }
