--- a/sass/page.sass
+++ b/sass/page.sass
@@ -22,13 +22,17 @@ figure
 		margin: 0.2em
 		&.fill
 			margin: 1em auto
+			width: 90%
 			width: 90vw
 			display: block	
 		&.maxHeight
+			max-height: 60%
 			max-height: 60vh
 		&.maxWidth20
+			max-width: 20%
 			max-width: 20vw
 		&.maxWidth70
+			max-width: 70%
 			max-width: 70vw
 a
 	color: #00f
@@ -65,6 +69,7 @@ a
 	+background-size(auto 100vh) //行動裝置
 	text-align: center
 	h1
+		padding-top: 2em
 		padding-top: 35vh
 		font-size: 2.5rem
 		vertical-align: midden
